<resources>
    <string name="app_name">Bump</string>
    <string name="sign_in">Sign In</string>
    <string name="signup_prompt">Don\'t have an account?\nSign up today!</string>

    <string name="consent_title">Terms and Conditions</string>
    <string name="consent_details">This is the Android Software Development Kit License Agreement\n
\n
1. Introduction
\n\n
1.1 The Android Software Development Kit (referred to in the License Agreement as the "SDK" and specifically including the Android system files, packaged APIs, and Google APIs add-ons) is licensed to you subject to the terms of the License Agreement. The License Agreement forms a legally binding contract between you and Google in relation to your use of the SDK.
\n
1.2 "Android" means the Android software stack for devices, as made available under the Android Open Source Project, which is located at the following URL: http://source.android.com/, as updated from time to time.
\n
1.3 A "compatible implementation" means any Android device that (i) complies with the Android Compatibility Definition document, which can be found at the Android compatibility website (http://source.android.com/compatibility) and which may be updated from time to time; and (ii) successfully passes the Android Compatibility Test Suite (CTS).
\n
1.4 "Google" means Google Inc., a Delaware corporation with principal place of business at 1600 Amphitheatre Parkway, Mountain View, CA 94043, United States.
\n
\n
2. Accepting this License Agreement
\n
2.1 In order to use the SDK, you must first agree to the License Agreement. You may not use the SDK if you do not accept the License Agreement.
\n
2.2 By clicking to accept, you hereby agree to the terms of the License Agreement.
\n
2.3 You may not use the SDK and may not accept the License Agreement if you are a person barred from receiving the SDK under the laws of the United States or other countries, including the country in which you are resident or from which you use the SDK.
\n
2.4 If you are agreeing to be bound by the License Agreement on behalf of your employer or other entity, you represent and warrant that you have full legal authority to bind your employer or such entity to the License Agreement. If you do not have the requisite authority, you may not accept the License Agreement or use the SDK on behalf of your employer or other entity.
\n
\n
3. SDK License from Google
\n
3.1 Subject to the terms of the License Agreement, Google grants you a limited, worldwide, royalty-free, non-assignable, non-exclusive, and non-sublicensable license to use the SDK solely to develop applications for compatible implementations of Android.
\n
3.2 You may not use this SDK to develop applications for other platforms (including non-compatible implementations of Android) or to develop another SDK. You are of course free to develop applications for other platforms, including non-compatible implementations of Android, provided that this SDK is not used for that purpose.
\n
3.3 You agree that Google or third parties own all legal right, title and interest in and to the SDK, including any Intellectual Property Rights that subsist in the SDK. "Intellectual Property Rights" means any and all rights under patent law, copyright law, trade secret law, trademark law, and any and all other proprietary rights. Google reserves all rights not expressly granted to you.
\n
3.4 You may not use the SDK for any purpose not expressly permitted by the License Agreement.  Except to the extent required by applicable third party licenses, you may not: (a) copy (except for backup purposes), modify, adapt, redistribute, decompile, reverse engineer, disassemble, or create derivative works of the SDK or any part of the SDK; or (b) load any part of the SDK onto a mobile handset or any other hardware device except a personal computer, combine any part of the SDK with other software, or distribute any software or device incorporating a part of the SDK.
\n
3.5 Use, reproduction and distribution of components of the SDK licensed under an open source software license are governed solely by the terms of that open source software license and not the License Agreement.
\n
3.6 You agree that the form and nature of the SDK that Google provides may change without prior notice to you and that future versions of the SDK may be incompatible with applications developed on previous versions of the SDK. You agree that Google may stop (permanently or temporarily) providing the SDK (or any features within the SDK) to you or to users generally at Google\'s sole discretion, without prior notice to you.
\n
3.7 Nothing in the License Agreement gives you a right to use any of Google\'s trade names, trademarks, service marks, logos, domain names, or other distinctive brand features.
\n
3.8 You agree that you will not remove, obscure, or alter any proprietary rights notices (including copyright and trademark notices) that may be affixed to or contained within the SDK.</string>
    <string name="fact_title">Did you know?</string>
    <string name="fact_1">1 in 4 teens contract a sexually transmitted disease every year.</string>
    <string name="fact_2">1 in 2 sexually active persons contract an STI by 25.</string>
    <string name="fact_3">Bacterial infections such as Chlamydia, Gonorrhea, and Syphilis can be cured with antibiotics.</string>
    <string name="fact_4">Right after gland to gland combat, 36% of people under 35 check their social media accounts!</string>
    <string name="fact_5">You should bump even if you are untested. This way, either you or your partner will be alerted when at risk in the future...annonymously!</string>

    <string name="bump_wait_message1">Waiting for partner\'s package...</string>
    <string name="bump_wait_message2">Received partner\'s package...</string>
    <string name="bump_wait_message3">Waiting for the server\'s load...</string>
    <string name="bump_wait_message4">In coming load!</string>

    <string name="animation_bump">Bump!</string>
    <string name="animation_guide_pair_1">I\'ve been tested since I last bumped with someone - what about you?</string>

    <!--https://thehotfix.net/forums/index.php?/topic/13560-25-safe-sex-slogans/ -->
    <string name="protection_slogan_default">REMEMBER!\nNo glove, no love!</string>


    <string name="status_negative">Your bump buddy was tested negative for HIV, Syphilis, Gonorrhea, and Chlamydia!</string>
    <string name="status_positive">The status of your partner is unknown.</string>
    <string name="status_remember">So Remember!</string>
    <string name="status_no_gaurantee">This does not gaurantee no cooties! Things may have changed or there may be other cooties untested.</string>

    <string name="status_alert_risk">You may be at risk of %1$s. You should be extra careful and get tested after %2$s.\nWhy the wait? If you test too early, results may be incorrect because of the window period.</string>
    <string name="status_alert_safe">Sir dangles does not appear to be at immediate risk.\nWe still recommend getting tested regularily!</string>

    <string name="partner_status_message_negative">Your partner has been tested negative for HIV, Syphilis, Gonorrhea and Chlamydia on</string>
    <string name="partner_status_message_unknown">Your partner\'s status is untested or positive for an infection. It is even more important that both of you are protected.</string>

    <string name="bump_permission_network_benefit">By joining this network, both you and your partner will be automatically notified when there is a risk of infection.\nYou will be keeping each other safe!</string>
    <string name="partner_status_warning_message">This is ONLY a test result and does NOT gaurantee partner\'s current status.\nWe highly recommend sharing with each other if you\'ve bumped since your last test.</string>
</resources>
