<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/partner_status_message_negative"
        android:id="@+id/dialog_partner_status"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="MMMM DD, YYYY"
        android:id="@+id/dialog_partner_date"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/partner_status_warning_message"
        android:id="@+id/dialog_partner_warning_message"
        android:layout_gravity="center_horizontal"
        android:paddingTop="24dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/protection_slogan_default"
        android:id="@+id/dialog_partner_slogan"
        android:layout_gravity="center_horizontal"
        android:textSize="24dp"
        android:paddingTop="24dp"
        android:textColor="#FF0000"
        android:gravity="center"/>
</LinearLayout>