<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="On July 19th 2016,"
        android:id="@+id/status_test_date"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/status_negative"
        android:id="@+id/status_test_result"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>

    <ImageView
        android:src="@drawable/bump_status_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/status_image"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/status_no_gaurantee"
        android:id="@+id/status_no_gaurantee"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/status_remember"
        android:id="@+id/status_remember"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/status_slogan1"
        android:id="@+id/status_slogan"
        android:layout_gravity="center_horizontal" />
</LinearLayout>